--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,145 @@
-.App {
-  text-align: center;
+html{
+    background-image: url(https://i.postimg.cc/fLCQkykN/fon-2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+}
+h1, h2, h3, h5, h6{
+    color: azure;
+    border-bottom: solid 2px rgba(255, 255, 255, 0.125);
+    padding-bottom: 25px;
+}
+body{
+    width: 100%;
+    height: 100%;
+    margin: 0; padding: 0;
+    background-color: rgba(27, 27, 27, 0.8);
+    font-family: Raleway, Helvetica, sans-serif;
+    font-size: 1.5em;
+    color: beige;
+    line-height: 1.65;
+}
+a {
+    border-bottom: dotted 1px rgba(255, 255, 255, 0.35);
+    color: beige;
+    text-decoration: none;
+}
+.container{
+    display: grid;
+    grid-template-columns: 50px 1fr 50px;
+    grid-template-rows: 300px repeat(6, auto) 100px;
+    gap: 0px 0px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    align-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media screen and (max-width: 1680px) { /* Laptop*/
+    body{
+        font-size: 1.25em;
+    }
+
+    .container {
+        grid-template-columns: 30px 1fr 30px;
+    }
+
+    .footer {
+        padding: 50px 150px;
+    }
+
+    .title, .block_1, .block_2, .block_3 {
+        padding: 75px 150px;
+    }
+
+    .walk, .photo, .rpg {
+        height: 300px;
+        width: 300px;
+    }
+
+    .title {
+        padding: 0 150px;
+        margin-bottom: 200px;
+    }
+
+    .link, .nameheader {
+        padding: 0 20px;
+    }
+}
+@media screen and (max-width: 980px) { /* Laptop*/
+    body{
+        font-size: 1em;
+    }
+
+    .container {
+        grid-template-columns: 20px 1fr 20px;
+        grid-template-rows: 200px repeat(6, auto) 100px;
+    }
+
+    .footer {
+        padding: 50px 100px; 
+    }
+
+    .block_1, .block_2, .block_3 {
+        padding: 50px 100px;
+    }
+
+    .walk, .photo, .rpg {
+        height: 200px;
+        width: 200px;
+    }
+
+    .title {
+        padding: 0 100px;
+        margin-bottom: 150px;
+    }
+
+    .link, .nameheader {
+        padding: 0 15px;
+    }
+
+    .vk, .tg {
+        width: 40px;
+        height: 40px;
+    }
+
+    .logo{
+        width: 70px;
+        height: 70px;
+    }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@media screen and (max-device-width: 390px) and (max-device-height: 844px) { /* iPhone 12 Pro*/
+    body{
+        font-size: 0.75em;
+    }
+    .title, .block_1, .block_2, .block_3, .footer {
+        padding: 50px 25px;
+    }
+    .walk, .photo, .rpg {
+        margin-left: 10px;
+        margin-right: 10px;
+        width:150px;
+        height: 150px;
+    }
+    .vk, .tg {
+        margin-left: 10px;
+    }
+    .logo{
+        width: 60px;
+        height: 60px;
+    }
+}
+@media screen and (max-device-width: 844px) and (max-device-height: 390px)  { /* iPhone 12 Pro*/
+    body{
+        font-size: 1em;
+    }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (max-device-width: 1024px) and (max-device-height: 1366px) { /* iPad Pro*/
+    .walk, .photo, .rpg {
+        height: 200px;
+        width: 200px;
+    }
 }
